index.html cambio de ubiacion

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 <title>Renova</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link rel="stylesheet" 		href="../css/base.css">
-<link rel="stylesheet" 		href="../css/vendor.css">  
-<link rel="stylesheet" 		href="../css/main.css">  
-<link rel="stylesheet" 		href="../css/personal.css">  
+
+<link rel="stylesheet" 		href="./views/css/base.css">
+<link rel="stylesheet" 		href="./views/css/vendor.css">
+<link rel="stylesheet" 		href="./views/css/main.css">
+<link rel="stylesheet" 		href="./views/css/personal.css">
 <link rel="stylesheet" 		href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="../js/src/modernizr.js"></script>
-<script src="../js/src/pace.min.js"></script>
+<script src="./views/js/src/modernizr.js"></script>
+<script src="./views/js/src/pace.min.js"></script>
 <script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
 
 
@@ -74,12 +75,12 @@
 			   	<div class="home-content-tablecell">
 					<div class="row">
 			   			<div class="col-twelve">		   			
-							<img src="../images/clients/logoRenova.png" style="width:50%" alt="">
+							<img src="./views/images/portfolio/logoRenova.png" style="width:50%" alt="">
 						  	<h2 class="animate-intro">distribucion filtros & lubricantes<br></h2>
 						  	<div class="more animate-intro">
-								<a class="button stroke col-four columna" href="./listas.html">Lista de Precios</a>
-								<a class="button stroke col-four columna" href="./ofertas.html">Ofertas del mes</a>
-								<a class="button stroke col-four columna" href="faq.html">Obtener comprobantes cliente #</a>
+								<a class="button stroke col-four columna" href="./views/html/listas.html">Lista de Precios</a>
+								<a class="button stroke col-four columna" href="./views/html/ofertas.html">Ofertas del mes</a>
+								<a class="button stroke col-four columna" href="./views/html/faq.html">Obtener comprobantes cliente #</a>
 						  	</div>							
 					  	</div> <!-- end col-twelve --> 
 					   </div> <!-- end row --> 
@@ -492,7 +493,9 @@
 
 
 </body>
-<script src="../js/src/plugins.js"></script>
-<script src="../js/src/main.js"></script>
-<script type="module" src="../js/indexService.js"></script> 
+<script src="./views/js/src/plugins.js"></script>
+<script src="./views/js/src/main.js"></script>
+<script   type="module"  src="./views/js/indexService.js"></script>
+
+
 </html>
