--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 		<h3>Renova</h3>  
 		 <ul class="nav-list">
 			 <li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-			 <li><a class="" href="#about" title="">About</a></li>
-			 <li><a class="" href="#services" title="">Services</a></li>
-			 <li><a class="" href="#portfolio" title="">Works</a></li>
-			 <li><a class="" href="listas.html" title="" style="color:orange">Ingresar a mi cuenta</a></li>						
+			 <li><a class="" href="views/html/listas.html" title="">Listas</a></li>
+			 <li><a class="" href="views/html/ofertas.html" title="">Ofertas</a></li>
+			 <li><a class="" href="views/html/faq.html" title="">Abrir un lubricentro</a></li>
+			 <li><a class="" href="views/html/resumenDeCuenta.html" title="" style="color:orange">Ingresar a mi cuenta</a></li>						
 		 </ul>	
 	 </nav>  <!-- end #menu-nav-wrap -->
 
