--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-179250562-1');
+</script>
 
 <title>Renova</title>
 
@@ -29,7 +38,7 @@
 
 <!--salto de linea en negro al ppio de la hoja-->
 
-<body id="top">
+<body id="top" style="padding:0px;"> 
 	
 
 
