mejore fAQS, CAMBIE IMAGENES

--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
 			<div class="mb-3 pics animation all 1"><img class="img-fluid" src="./views/images/portfolio/total.png" alt="Card image cap"></div>
 			<div class="mb-3 pics animation all 1"><img class="img-fluid" src="./views/images/portfolio/fram.png" alt="Card image cap"></div>
 			<div class="mb-3 pics animation all 1"><img class="img-fluid" src="./views/images/portfolio/valvoline2.png" alt="Card image cap"></div>
+			<div class="mb-3 pics animation all 1"><img class="img-fluid" src="./views/images/portfolio/rama.png" alt="Card image cap"></div>
+			<div class="mb-3 pics animation all 1"><img class="img-fluid" src="./views/images/portfolio/wl.jpg" alt="Card image cap"></div>
+			<div class="mb-3 pics animation all 1"><img class="img-fluid" src="./views/images/portfolio/pyroil.png" alt="Card image cap"></div>
+			<div class="mb-3 pics animation all 1"><img class="img-fluid" src="./views/images/portfolio/trico.jpg" alt="Card image cap"></div>
+			<div class="mb-3 pics animation all 1"><img class="img-fluid" src="./views/images/portfolio/fram3.jpg" alt="Card image cap"></div>
 			
 		  </div>
 		</div>
