--- a/listas.html
+++ b/listas.html
@@ -4,6 +4,16 @@
 <title>Listas de precio</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="refresh" content="0;URL=https://hardcore-mahavira-a33061.netlify.app/views/html/listas.html">
+<!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-963730457');
+</script>
+
 </head>
 <body>
 </body>
