agrego el tag de google

--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
 <script src="./views/js/src/pace.min.js"></script>
 <script src="./views/js/carusel.js"></script>
 <script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
-<!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R1JPEQDK18"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-963730457');
+  gtag('config', 'G-R1JPEQDK18');
 </script>
-
 
 
 </head>
