--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" 		href="./views/css/index.css">
 <link rel="stylesheet" 		href="./views/css/carrousel.css">
 <link rel="stylesheet" 		href="./views/css/galeria.css">
-<script data-cfasync="false" src="form-submission-handler.js"></script>
+<!-- <script data-cfasync="false" src="form-submission-handler.js"></script> -->
 <link rel="stylesheet" 		href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="./views/js/src/modernizr.js"></script>
