--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <link rel="stylesheet" 		href="./views/css/base.css">
-<link rel="stylesheet" 		href="./views/css/vendor.css">
+<!-- <link rel="stylesheet" 		href="./views/css/vendor.css"> -->
 <link rel="stylesheet" 		href="./views/css/main.css">
 <link rel="stylesheet" 		href="./views/css/personal.css">
 
@@ -26,8 +26,8 @@
 <!-- <script data-cfasync="false" src="form-submission-handler.js"></script> -->
 <link rel="stylesheet" 		href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="./views/js/src/modernizr.js"></script>
-<script src="./views/js/src/pace.min.js"></script>
+<!-- <script src="./views/js/src/modernizr.js"></script> -->
+<!-- <script src="./views/js/src/pace.min.js"></script> -->
 <script src="./views/js/carusel.js"></script>
 <script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -143,8 +143,8 @@
 <a id="bloqueHeader"></a>
 <section id="services">
 
-   	<div class="overlay"></div>
-   	<div class="gradient-overlay"></div>
+   	<div ></div>
+   	<div ></div>
    	
    	<div class="row narrow section-intro with-bottom-sep animate-this">
    		<div class="col-full">
