--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 		<span class="header-menu-icon"></span>
 	</a> 
 	<nav id="menu-nav-wrap">
-		<a href="#0" class="close-button" title="close"><span>Close</span></a>	
+		<a href="#0" class="close-button" ><span>Close</span></a>	
 		<h3>Renova</h3>  
 		 <ul class="nav-list">
-			 <li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
-			 <li><a class="" href="views/html/listas.html" title="">Listas</a></li>
-			 <li><a class="" href="views/html/login.html" title="">Ofertas</a></li>
-			 <li><a class="" href="views/html/faq.html" title="">Abrir un lubricentro</a></li>
-			 <!-- <li><a class="" href="views/html/resumenDeCuenta.html" title="" style="color:orange">Ingresar a mi cuenta</a></li>						 -->
+			 <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
+			 <li><a class="" href="views/html/listas.html">Listas</a></li>
+			 <li><a class="" href="views/html/login.html">Ofertas</a></li>
+			 <li><a class="" href="views/html/faq.html">Abrir un lubricentro</a></li>
+		
 		 </ul>	
 	 </nav>  <!-- end #menu-nav-wrap -->
 
