cambios emta tag

--- a/index.html
+++ b/index.html
@@ -3,54 +3,42 @@
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-179250562-1');
-</script>
-
 <title>Renova</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-<link rel="stylesheet" 		href="./views/css/base.css">
-<!-- <link rel="stylesheet" 		href="./views/css/vendor.css"> -->
-<link rel="stylesheet" 		href="./views/css/main.css">
-<link rel="stylesheet" 		href="./views/css/personal.css">
-
-<link rel="stylesheet" 		href="./views/css/index.css">
-<link rel="stylesheet" 		href="./views/css/carrousel.css">
-<link rel="stylesheet" 		href="./views/css/galeria.css">
-<!-- <script data-cfasync="false" src="form-submission-handler.js"></script> -->
-<link rel="stylesheet" 		href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
+<meta name="viewport" 			content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta property="og:type" 		content="website" />
+<meta property="og:title" 		content="Home - Renova" />
+<meta property="og:description" content="Mayoristas de lubricantes y filtros" />
+<meta property="og:url" 		content="https://www.distribuidorarenova.com.ar" />
+<meta property="og:site_name" 	content="Renova" />
+<meta name="twitter:title" 		content="Renova">
+<meta name="twitter:description"content="Mayoristas de lubricantes y filtros">
+<meta name="twitter:image"		content="https://www.distribuidorarenova.com.ar/views/images/fondoNaranja.jpg">
+<link rel="stylesheet" 			href="./views/css/base.css">
+<link rel="stylesheet" 			href="./views/css/vendor.css"> 
+<link rel="stylesheet" 			href="./views/css/main.css">
+<link rel="stylesheet" 			href="./views/css/personal.css">
+<link rel="stylesheet" 			href="./views/css/index.css">
+<link rel="stylesheet" 			href="./views/css/carrousel.css">
+<link rel="stylesheet" 			href="./views/css/galeria.css">
+<link rel="stylesheet" 			href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <!-- <script src="./views/js/src/modernizr.js"></script> -->
 <!-- <script src="./views/js/src/pace.min.js"></script> -->
 <script src="./views/js/carusel.js"></script>
 <script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1JPEQDK18"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-R1JPEQDK18');
-</script>
+<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-R1JPEQDK18');</script>
+<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-179250562-1');</script>
 
 
 </head>
 
-
 <!--salto de linea en negro al ppio de la hoja-->
-
 <body id="top" style="padding:0px;"> 
 	
-
-
-
 <!-- WPP BUTTON ================================================== -->
 <div id="WAButton" style="font-family: Arial, Helvetica, sans-serif; z-index:10;"></div>
 
