--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-1"></script>
-<title>Renova</title>
-
+<title>Renova - Distribuidora mayorista de filtros y lubricantes</title>
+<meta name="description" 		content="Distribuidora Mayorista de filtros y lubricantes">
 <meta name="viewport" 			content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="keywords" 			content="filtros, lubricantes, filtros y aceites, todo en filtros, industria">
+<meta name="author" 			content="John Doe">
 <meta property="og:type" 		content="website" />
 <meta property="og:title" 		content="Home - Renova" />
 <meta property="og:description" content="Mayoristas de lubricantes y filtros" />
