google search console

--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="es">
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-1"></script>
-<title>Renova - Distribuidora mayorista de filtros y lubricantes</title>
-<meta name="description" 		content="Distribuidora Mayorista de filtros y lubricantes">
-<meta name="viewport" 			content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="keywords" 			content="filtros, lubricantes, filtros y aceites, todo en filtros, industria">
-<meta name="author" 			content="John Doe">
-<meta property="og:type" 		content="website" />
-<meta property="og:title" 		content="Home - Renova" />
-<meta property="og:description" content="Mayoristas de lubricantes y filtros" />
-<meta property="og:url" 		content="https://www.distribuidorarenova.com.ar" />
-<meta property="og:site_name" 	content="Renova" />
-<meta name="twitter:title" 		content="Renova">
-<meta name="twitter:description"content="Mayoristas de lubricantes y filtros">
-<meta name="twitter:image"		content="https://www.distribuidorarenova.com.ar/views/images/fondoNaranja.jpg">
-<link rel="stylesheet" 			href="./views/css/base.css">
-<link rel="stylesheet" 			href="./views/css/vendor.css"> 
-<link rel="stylesheet" 			href="./views/css/main.css">
-<link rel="stylesheet" 			href="./views/css/personal.css">
-<link rel="stylesheet" 			href="./views/css/index.css">
-<link rel="stylesheet" 			href="./views/css/carrousel.css">
-<link rel="stylesheet" 			href="./views/css/galeria.css">
-<link rel="stylesheet" 			href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<!-- <script src="./views/js/src/modernizr.js"></script> -->
-<!-- <script src="./views/js/src/pace.min.js"></script> -->
-<script src="./views/js/carusel.js"></script>
-<script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R1JPEQDK18"></script>
-<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-R1JPEQDK18');</script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-1"></script>
+	<title>Renova - Distribuidora mayorista de filtros y lubricantes</title>
+	<meta name="description" 		content="Distribuidora Mayorista de filtros y lubricantes">
+	<meta name="google-site-verification" content="q-QFK8hbiU4TY9M5PLXbXHqhsffNgY5e-CRp5rctgrQ" />
+	<meta name="viewport" 			content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="keywords" 			content="filtros, lubricantes, filtros y aceites, todo en filtros, industria">
+	<meta name="author" 			content="John Doe">
+	<meta property="og:type" 		content="website" />
+	<meta property="og:title" 		content="Home - Renova" />
+	<meta property="og:description" content="Mayoristas de lubricantes y filtros" />
+	<meta property="og:url" 		content="https://www.distribuidorarenova.com.ar" />
+	<meta property="og:site_name" 	content="Renova" />
+	<meta name="twitter:title" 		content="Renova">
+	<meta name="twitter:description"content="Mayoristas de lubricantes y filtros">
+	<meta name="twitter:image"		content="https://www.distribuidorarenova.com.ar/views/images/fondoNaranja.jpg">
+	<link rel="stylesheet" 			href="./views/css/base.css">
+	<link rel="stylesheet" 			href="./views/css/vendor.css"> 
+	<link rel="stylesheet" 			href="./views/css/main.css">
+	<link rel="stylesheet" 			href="./views/css/personal.css">
+	<link rel="stylesheet" 			href="./views/css/index.css">
+	<link rel="stylesheet" 			href="./views/css/carrousel.css">
+	<link rel="stylesheet" 			href="./views/css/galeria.css">
+	<link rel="stylesheet" 			href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
+	<link rel="icon" 				type="image/png" href="/views/images/fondoNaranja.jpg"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<!-- <script src="./views/js/src/modernizr.js"></script> -->
+	<!-- <script src="./views/js/src/pace.min.js"></script> -->
+	<script src="./views/js/carusel.js"></script>
+	<script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-R1JPEQDK18"></script>
+	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-R1JPEQDK18');</script>
 <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-179250562-1');</script>
-
 
 </head>
 
@@ -278,7 +277,7 @@
 	<div class="overlay"></div>
 	<div class="row narrow section-intro with-bottom-sep animate-this">
 		<div class="col-twelve">
-			<h1>Contactenos</h1>
+			<h3>Contactenos</h3>
 		</div>
 	</div> 
 	<div class="row contact-content">
