cambios para seo

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
 <!-- LOGOS CARROUSEL
 ================================================== -->
 <div class="container-fluid carusel">
-	<img class="logo" src="views/images/logos/fram.png">
-	<img class="logo" src="views/images/logos/valvoline.png">
-	<img class="logo" src="views/images/logos/motul.png">
-	<img class="logo" src="views/images/logos/total.png">
-	<img class="logo" src="views/images/logos/elf.png">
-	<img class="logo" src="views/images/logos/petronas.png">
-	<img class="logo" src="views/images/logos/locx.png">
-	<img class="logo" src="views/images/logos/wl.png">
+	<img class="logo" alt="fram" src="views/images/logos/fram.png">
+	<img class="logo" alt="valvoline" src="views/images/logos/valvoline.png">
+	<img class="logo" alt="motul" src="views/images/logos/motul.png">
+	<img class="logo" alt="total" src="views/images/logos/total.png">
+	<img class="logo" alt="elf" src="views/images/logos/elf.png">
+	<img class="logo" alt="petronas" src="views/images/logos/petronas.png">
+	<img class="logo" alt="locx" src="views/images/logos/locx.png">
+	<img class="logo" alt="wagner lockheed" src="views/images/logos/wl.png">
 </div>
 
 <!-- SEVICIOS
@@ -137,7 +137,7 @@
    	
    	<div class="row narrow section-intro with-bottom-sep animate-this">
    		<div class="col-full">
-   			<h1>Nosotros</h1>
+   			<h1>Acerca de nosotros</h1>
 			<p class="lead" id="Nosotros"></p>  			
    	   </div> 
    	</div> 
@@ -236,7 +236,7 @@
 	
 			   <li>
 				  <p>
-					Muy buena atencion y tienen de todo!!
+					Muy buena atención y tienen de todo!!
 				  </p>                                       
 			   </li> <!-- end slide -->
 
