--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html class="no-js" lang="es">
 <head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+   })(window,document,'script','dataLayer','GTM-PXT9QJL');</script>
+   <!-- End Google Tag Manager -->
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-1"></script>
 	<title>Renova - Distribuidora mayorista de filtros y lubricantes</title>
@@ -39,6 +46,10 @@
 
 <!--salto de linea en negro al ppio de la hoja-->
 <body id="top" style="padding:0px;"> 
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXT9QJL"
+   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+   <!-- End Google Tag Manager (noscript) -->
 	
 <!-- WPP BUTTON ================================================== -->
 <div id="WAButton" style="font-family: Arial, Helvetica, sans-serif; z-index:10;"></div>
@@ -334,8 +345,8 @@
 	   			<p>info@distribuidorarenova.com<br></p>
 	   		</div> 
 	   		<div class="cinfo">
-	   			<h6>Llamanos</h6>
-	   			<p>11 4582-2887</p>
+	   			<button href="#" name="button1" onclick="dataLayer.push({'event': 'button1-click'});"><h6>Llamanos</h6></button>
+	   			<button><p>11 4582-2887</p></button>
 	   		</div>
 		</div>
    	</div>
@@ -404,7 +415,7 @@
 			<div class="col-twelve">
 				<div class="copyright">
 					<span>crafted by <a href="http://www.sideral.dev/" style="color:yellowgreen">sideral.dev</a></span>
-					<span>Template <a href="http://www.styleshout.com/">  styleshout</a></span>
+
 				</div>
 			</div>
 		</div>
