--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-   })(window,document,'script','dataLayer','GTM-PXT9QJL');</script>
+   })(window,document,'script','dataLayer','GTM-PMDJKK6');</script>
    <!-- End Google Tag Manager -->
 
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-1"></script>
@@ -46,8 +46,8 @@
 
 <!--salto de linea en negro al ppio de la hoja-->
 <body id="top" style="padding:0px;"> 
-   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXT9QJL"
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PMDJKK6"
    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    <!-- End Google Tag Manager (noscript) -->
 	
@@ -346,7 +346,7 @@
 	   		</div> 
 	   		<div class="cinfo">
 	   			<button href="#" name="button1" onclick="dataLayer.push({'event': 'button1-click'});"><h6>Llamanos</h6></button>
-	   			<button><p>11 4582-2887</p></button>
+	   		<p>11 4582-2887</p>
 	   		</div>
 		</div>
    	</div>
