--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 						  	<div class="more animate-intro">
 
                       <a class="button stroke col-four columna" onclick="return gtag_report_conversion('views/html/listas.html');"
-                           href="views/html/listas.html">Listas</a>
+                           href="views/html/listas.html">Listas.</a>
                        
 								<!-- <a class="button stroke col-four columna" href="./views/html/listas.html"> 
                            <button style="all:unset" href="#" name="button1" onclick="dataLayer.push({'event': 'button1-click'});">Listas</button>
