--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ style="font-family: Arial, Helvetica, sans-serif; z-index:1000;"></div>
                         
 
                         <a class="button stroke col-four columna" onclick="return gtag_report_conversion2('https://www.distribuidorarenova.com.ar/views/html/faq.html');"
-                        href="views/html/listas.html">abrir un lubricentro.</a>
+                        href="views/html/listas.html">abrir un lubricentro..</a>
 
 
 							  </div>		
