--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
               <a class="button stroke col-four columna"
                 onclick="return gtag_report_conversion('https://www.distribuidorarenova.com.ar/views/html/listas.html');"
-                href="views/html/listas.html">Listas..</a>
+                href="views/html/listas.html">Lista de precios</a>
 
               <a class="button stroke col-four columna" href="./views/html/login.html">
                 <button style="all:unset" href="#" name="button1"
