agrego boton de mi cuenta

--- a/index.html
+++ b/index.html
@@ -134,8 +134,13 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
   <!-- SIDE MENU================================================== -->
   <header>
+    <div class="mi-cuenta-container"
+      style="position: absolute; top: 25px; left: 50%; transform: translateX(-50%); z-index: 100; text-align: center; width: 100%;">
 
-
+      <a href="https://renovapp-clients.vercel.app" class="mi-cuenta-btn button "
+        style="border:2px solid white;background-color: #0066cc95; color: white; padding: 0px 25px; border-radius: 50px; text-decoration: none; font-weight: 400; display: inline-block; font-family: 'Montserrat', sans-serif;">Mi
+        cuenta ⇨</a>
+    </div>
 
     <a id="header-menu-trigger" href="#0">
       <span class="header-menu-text">Menu</span>
