--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
       style="position: absolute; top: 25px; left: 50%; transform: translateX(-50%); z-index: 100; text-align: center; width: 100%;">
 
       <a href="https://renovapp-clients.vercel.app" class="mi-cuenta-btn button "
-        style="border:2px solid white;background-color: #0066cc95; color: white; padding: 0px 25px; border-radius: 50px; text-decoration: none; font-weight: 400; display: inline-block; font-family: 'Montserrat', sans-serif;">Mi
+        style="border:2px solid white;background-color: rgb(203, 40, 6); color: white; padding: 0px 25px; border-radius: 50px; text-decoration: none; font-weight: 400; display: inline-block; font-family: 'Montserrat', sans-serif;">Mi
         cuenta ⇨</a>
     </div>
 
