--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <meta name="google-site-verification" content="q-QFK8hbiU4TY9M5PLXbXHqhsffNgY5e-CRp5rctgrQ" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <meta name="keywords" content="filtros, lubricantes, filtros y aceites, todo en filtros, industria">
+
+      <!-- Theme Color para barra de navegación del navegador -->
+      <meta name="theme-color" content="#f39c12">
+      <meta name="msapplication-navbutton-color" content="#f39c12">
+      <meta name="apple-mobile-web-app-status-bar-style" content="default">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Home - Renova" />
       <meta property="og:description" content="Mayoristas de lubricantes y filtros" />
@@ -134,13 +141,34 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
       <!-- SIDE MENU================================================== -->
       <header>
-            <div class="mi-cuenta-container"
-                  style="position: absolute; top: 25px; left: 50%; transform: translateX(-50%); z-index: 100; text-align: center; width: 100%;">
+            <span class="mi-cuenta-container"
+                  style="position: absolute; top: 25px; left: 50%; transform: translateX(-50%); z-index: 100; text-align: center; ">
 
-                  <a href="https://renovapp-clients.vercel.app" class="mi-cuenta-btn button "
-                        style="border:2px solid white;background-color: rgb(203, 40, 6); color: white; padding: 0px 25px; border-radius: 50px; text-decoration: none; font-weight: 400; display: inline-block; font-family: 'Montserrat', sans-serif;">Mi
-                        cuenta ⇨</a>
-            </div>
+                  <a href="https://renovapp-clients.vercel.app" class="mi-cuenta-btn button" style="background: linear-gradient(135deg, #e74c3c 0%, #c0392b 100%); 
+                               color: white; 
+                               padding: 12px 30px; 
+                               border-radius: 50px; 
+                               text-decoration: none; 
+                               font-weight: 600; 
+                               display: flex;
+                               align-items: center;
+                               justify-content: center; 
+                               font-family: 'Montserrat', sans-serif;
+                               border: 2px solid rgba(255,255,255,0.3);
+                               box-shadow: 0 8px 25px rgba(231, 76, 60, 0.4), 0 4px 12px rgba(0,0,0,0.2);
+                               transition: all 0.3s ease;
+                               text-transform: uppercase;
+                               letter-spacing: 1px;
+                               font-size: 14px;
+                               position: relative;
+                               overflow: hidden;
+                               line-height: 1;
+                               min-height: 42px;"
+                        onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 12px 35px rgba(231, 76, 60, 0.6), 0 6px 18px rgba(0,0,0,0.3)'; this.style.background='linear-gradient(135deg, #c0392b 0%, #a93226 100%)';"
+                        onmouseout="this.style.transform='translateY(0px)'; this.style.boxShadow='0 8px 25px rgba(231, 76, 60, 0.4), 0 4px 12px rgba(0,0,0,0.2)'; this.style.background='linear-gradient(135deg, #e74c3c 0%, #c0392b 100%)';">
+                        MI CUENTA →
+                  </a>
+            </span>
 
             <a id="header-menu-trigger" href="#0">
                   <span class="header-menu-text">Menu</span>
@@ -152,9 +180,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                   <ul class="nav-list">
                         <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
                         <li><a class="" href="views/html/listas.html">Listas</a></li>
-
                         <li><a class="" href="views/html/login.html">Ofertas</a></li>
-                        <li><a class="" href="views/html/faq.html">Abrir un lubricentro</a></li>
+
 
                   </ul>
             </nav> <!-- end #menu-nav-wrap -->
@@ -164,19 +191,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
       <!-- HOME
 ================================================== -->
-      <section id="home">
+      <section id="home" style="height: 80vh;">
 
-            <ul class="home-social-list" style="z-index:20">
-                  <li class="animate-intro">
-                        <a href="#"><i class="fa fa-facebook-square"></i></a>
-                  </li>
-                  <li class="animate-intro">
-                        <a href="#contactenos"><i class="fa fa-location-arrow"></i></a>
-                  </li>
-                  <!-- <li class="animate-intro">
-			  <a href="#"><i class="fa fa-instagram"></i></a>
-		</li>	       -->
-            </ul>
+
             <div class="overlay"></div>
             <div class="home-content-table">
                   <div class="home-content-tablecell">
@@ -187,20 +204,18 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
                                     <div class="more animate-intro">
 
-                                          <a class="button stroke col-four columna"
+                                          <a class="button stroke col-twelve columna"
                                                 onclick="return gtag_report_conversion('https://www.distribuidorarenova.com.ar/views/html/listas.html');"
                                                 href="views/html/listas.html">Lista de precios</a>
 
-                                          <a class="button stroke col-four columna" href="./views/html/login.html">
+                                          <a class="button stroke col-twelve columna" href="./views/html/login.html">
                                                 <button style="all:unset" href="#" name="button1"
                                                       onclick="dataLayer.push({'event': 'button1-click'});">Articulos
                                                       Destacados</button>
                                           </a>
 
 
-                                          <a class="button stroke col-four columna"
-                                                onclick="return gtag_report_conversion2('https://www.distribuidorarenova.com.ar/views/html/faq.html');"
-                                                href="views/html/listas.html">abrir un lubricentro...</a>
+
 
 
                                     </div>
@@ -235,59 +250,6 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             <img class="logo" alt="locx" src="views/images/logos/locx.png">
             <img class="logo" alt="wagner lockheed" src="views/images/logos/wl.png">
       </div>
-
-      <!-- SEVICIOS
-================================================== -->
-      <a id="bloqueHeader"></a>
-      <section id="services">
-
-            <div></div>
-            <div></div>
-
-            <div class="row narrow section-intro with-bottom-sep animate-this">
-                  <div class="col-full">
-                        <h1>Filtros y lubricantes</h1>
-                        <p class="lead" id="Nosotros"></p>
-                  </div>
-            </div>
-            <div class="row services-content">
-                  <div class="services-list block-1-2 block-tab-full group">
-                        <div class="bgrid service-item animate-this">
-                              <span class="icon"><i class="icon-paint-brush"></i></span>
-                              <div class="service-content">
-                                    <h3 class="h05" id="tituloServicios1"></h3>
-                                    <p id="descServicios1"></p>
-                              </div>
-                        </div>
-
-                        <div class="bgrid service-item animate-this">
-                              <span class="icon"><i class="icon-earth"></i></span>
-                              <div class="service-content">
-                                    <h3 class="h05" id="tituloServicios2">
-                                    </h3>
-                                    <p id="descServicios2"></p>
-                              </div>
-                        </div>
-
-                        <div class="bgrid service-item animate-this">
-                              <span class="icon"><i class="icon-earth"></i></span>
-                              <div class="service-content">
-                                    <h3 class="h05" id="tituloServicios3"></h3>
-                                    <p id="descServicios3"></p>
-                              </div>
-                        </div>
-
-                        <div class="bgrid service-item animate-this">
-                              <span class="icon"><i class="icon-earth"></i></span>
-                              <div class="service-content">
-                                    <h3 class="h05" id="tituloServicios4"></h3>
-                                    <p id="descServicios4"></p>
-                              </div>
-                        </div>
-
-                  </div>
-            </div>
-      </section>
 
 
       <!-- IMAGENES
@@ -334,6 +296,98 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
 
 
+      <!-- SEVICIOS
+================================================== -->
+      <a id="bloqueHeader"></a>
+      <section id="services">
+
+            <div></div>
+            <div></div>
+
+            <div class="row narrow section-intro with-bottom-sep">
+                  <div class="col-full">
+                        <h1>Filtros y lubricantes</h1>
+                        <p class="lead" id="Nosotros"></p>
+                  </div>
+            </div>
+            <div class="row services-content">
+                  <div class="services-list block-1-2 block-tab-full group">
+                        <div class="bgrid service-item">
+                              <span class="icon"><i class="fa fa-shopping-cart"></i></span>
+                              <div class="service-content">
+                                    <h3 class="h05" id="tituloServicios1"></h3>
+                                    <p id="descServicios1"></p>
+                              </div>
+                        </div>
+
+                        <div class="bgrid service-item">
+                              <span class="icon"><i class="fa fa-truck"></i></span>
+                              <div class="service-content">
+                                    <h3 class="h05" id="tituloServicios2">
+                                    </h3>
+                                    <p id="descServicios2"></p>
+                              </div>
+                        </div>
+
+                        <div class="bgrid service-item">
+                              <span class="icon"><i class="fa fa-cogs"></i></span>
+                              <div class="service-content">
+                                    <h3 class="h05" id="tituloServicios3"></h3>
+                                    <p id="descServicios3"></p>
+                              </div>
+                        </div>
+
+
+                  </div>
+            </div>
+      </section>
+
+      <!-- INDUSTRIA SECTION
+================================================== -->
+      <section id="industria"
+            style="background: linear-gradient(135deg, #f39c12 0%, #e67e22 100%); padding: 80px 0; color: white; position: relative; overflow: hidden;">
+            <div
+                  style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('views/images/industria.jpg') center/cover; opacity: 0.4; z-index: 0;">
+            </div>
+            <div
+                  style="content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.5); z-index: 1;">
+            </div>
+
+            <div class="row section-intro" style="position: relative; z-index: 2;">
+                  <div class="col-full">
+                        <h1
+                              style="color: white; text-align: center; margin-bottom: 40px; font-size: 4.5rem; font-weight: 700; text-shadow: 3px 3px 6px rgba(0,0,0,0.5); line-height: 1.1; letter-spacing: -1px;">
+                              Soluciones para la Industria
+                        </h1>
+                        <p
+                              style="text-align: center; font-size: 20px; max-width: 900px; margin: 0 auto 40px; font-weight: 500; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); line-height: 1.6; color: rgba(255,255,255,0.95);">
+                              Proveemos filtros y lubricantes especializados para la industria. Contamos con productos
+                              de alta calidad
+                              para maquinaria pesada, compresores, generadores y equipos industriales. Asesoramiento
+                              técnico especializado
+                              y soporte continuo para maximizar el rendimiento de sus equipos.
+                        </p>
+                  </div>
+            </div>
+
+            <div class="row" style="text-align: center; position: relative; z-index: 2;">
+                  <div class="col-full">
+                        <div
+                              style="background: linear-gradient(135deg, rgba(243, 156, 18, 0.8) 0%, rgba(230, 126, 34, 0.9) 100%); padding: 40px; border-radius: 15px; backdrop-filter: blur(10px); margin: 0 auto; max-width: 600px; box-shadow: 0 15px 40px rgba(0,0,0,0.5), 0 0 0 1px rgba(255,255,255,0.2); border: 2px solid rgba(255,255,255,0.4); overflow: hidden;">
+                              <h3 style="color: white; margin-bottom: 20px;">¿Necesita una cotización personalizada?
+                              </h3>
+                              <p style="color: white; margin-bottom: 30px;">
+                                    Nuestro equipo técnico está listo para asesorarle en la selección de productos
+                                    específicos para su industria.
+                              </p>
+                              <a href="https://wa.me/5491144075850" target="_blank"
+                                    style="background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%); color: #e67e22; padding: 18px 35px; border-radius: 8px; text-decoration: none; font-weight: bold; display: inline-block; transition: all 0.3s ease; border: 2px solid white; text-transform: uppercase; letter-spacing: 1px; box-shadow: 0 6px 20px rgba(0,0,0,0.4), 0 2px 8px rgba(243, 156, 18, 0.3);">
+                                    Solicitar Cotización
+                              </a>
+                        </div>
+                  </div>
+            </div>
+      </section>
 
       <!-- TESTIMONIALES
 ================================================== -->
